<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxLength="16"
        android:maxLines="1"
        android:visibility="gone"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="12"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_nickname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/master_name_hint"
        android:inputType="text"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/master_address_hint"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/master_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <!--宠物相关-->

    <EditText
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/pet_name_hint"
        android:inputType="text"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/pet_kind"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/pet_kind_hint"
        android:inputType="text"
        android:maxLength="16"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/pet_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:hint="@string/pet_age_hint"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pet_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical"
        android:hint="@string/pet_type_hint"
        android:maxLength="16"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pet_img_select"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical"
        android:hint="@string/pet_img_hint"
        android:maxLength="16"
        android:visibility="gone"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/pet_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/register"
        android:textSize="16sp" />
</LinearLayout>
